--- a/package.json
+++ b/package.json
@@ -29,15 +29,15 @@
     "access": "public"
   },
   "name": "savim-s3",
-  "author": "flexper",
+  "author": "qlaffont",
   "module": "dist/savim-s3.esm.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/flexper/savim-s3.git"
+    "url": "https://github.com/qlaffont/savim-s3.git"
   },
   "bugs": {
-    "url": "https://github.com/flexper/savim-s3/issues",
-    "email": "contact@flexper.fr"
+    "url": "https://github.com/qlaffont/savim-s3/issues",
+    "email": "contact@qlaffont.com"
   },
   "size-limit": [
     {
