--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        node: ['16.x', '18.x']
+        node: ["20.X"]
         os: [ubuntu-latest]
 
     steps:
@@ -51,7 +51,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: "16"
+          node-version: "20"
       - uses: pnpm/action-setup@v4.0.0
       - run: pnpm install --no-frozen-lockfile
       - run: sleep 5 && pnpm test
